# python-project-50

./: .coverage  .gitignore  Makefile  README.md  cli.py  coverage.xml  diff_builder.py  main.py  parser.py  plain.py  pyproject.toml  setup.cfg  stylish.py
.github/workflows/: hexlet-check.yml  main.yml
gendiff/: __init__.py  cli.py  constants.py  diff_builder.py  generate_diff.py  main.py  parser.py
gendiff/renders/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: diff_builder.py  gendiff.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: nested_result.txt
tests/fixtures/results/nested/: json_result.txt  stylish_result.txt
tests/fixtures/results/simple/: json_result.txt
