[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff project"
authors = ["Anastasia <anastasiia1803@gmail.com>"]
readme = "README.md"


packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.11"
pyyml = "^0.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"